# BankManagementSystem

./: Accounts.txt  CMakeLists.txt  CreateAccount.h  Database.txt  InterFace.h  Login.h  MyFunctions.h  README.md  SearchOnDatabase.h  ShaTwoFiftySix.h  Username.txt  account.h  header.h  main.c
